--- a/udemy/Spring Security 6/springsecuritysection3/build.gradle
+++ b/udemy/Spring Security 6/springsecuritysection3/build.gradle
@@ -21,6 +21,10 @@ dependencies {
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+
+	implementation 'org.springframework.boot:spring-boot-starter-jdbc:3.2.2'
+	implementation 'com.mysql:mysql-connector-j:8.3.0'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.2'
 }
 
 tasks.named('test') {
