--- a/udemy/Spring Security 6/springsecuritysection3/src/main/resources/application.properties
+++ b/udemy/Spring Security 6/springsecuritysection3/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 
+spring.datasource.url=jdbc:mysql://db-springsecurity-udemy.c5ehygqdito3.ap-northeast-2.rds.amazonaws.com/eazybank
+spring.datasource.username=admin
+spring.datasource.password=ssafy123
+
+# ??? ???? ?? SQL? ??
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
